<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<PreferenceCategory-->
        <!--android:title="@string/title_first_section">-->

        <!--<CheckBoxPreference-->
            <!--android:key="checkbox_preference"-->
            <!--android:title="@string/title_checkbox_preference"-->
            <!--android:defaultValue="@string/default_checkbox_preference"/>-->

        <!--<EditTextPreference-->
            <!--android:key="edittext_preference"-->
            <!--android:title="@string/title_edittext_preference"-->
            <!--android:summary="@string/summary_edittext_preference"-->
            <!--android:dialogTitle="@string/dialog_title_edittext_preference"-->
            <!--android:dependency="checkbox_preference" />-->

    <!--</PreferenceCategory>-->

    <PreferenceCategory
        android:title="@string/title_data_section">

        <ListPreference
            android:key="@string/weather_provider_key"
            android:title="@string/title_weather_provider"
            android:dialogTitle="@string/dialog_title_weather_provider"
            android:entries="@array/weather_providers"
            android:entryValues="@array/weather_providers_values"
            android:defaultValue="apixu"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_about_section">

        <Preference
            android:key="@string/version_preference_key"
            android:title="@string/title_version_preference">
        </Preference>

        <Preference
            android:key="@string/flavor_preference_key"
            android:title="@string/title_flavor_preference">
        </Preference>

        <Preference
            android:title="@string/title_github_preference"
            android:summary="@string/github_url">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/github_url" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>